--- a/data/minecraft/loot_tables/chests/end_city_treasure.json
+++ b/data/minecraft/loot_tables/chests/end_city_treasure.json
@@ -69,6 +69,20 @@
 					"name": "minecraft:chests/reference/extra/op_weapons"
 				}
 			]
+		},
+		{
+		  "bonus_rolls": 0.0,
+		  "entries": [
+			{
+			  "type": "minecraft:empty",
+			  "weight": 14
+			},
+			{
+			  "type": "minecraft:item",
+			  "name": "minecraft:spire_armor_trim_smithing_template"
+			}
+		  ],
+		  "rolls": 1.0
 		}
 	]
 }
